--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,3 +6,12 @@ requires-python = ">=3.13"
 dependencies = [
     "pyyaml>=6.0.2",
 ]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+pythonpath = ["src"]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.2",
+]
