--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
+    "fastapi[standard]>=0.117.1",
     "pyyaml>=6.0.2",
+    "uvicorn>=0.36.0",
 ]
 
 [tool.pytest.ini_options]
