--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.117.1",
     "pyyaml>=6.0.2",
+    "requests>=2.32.5",
     "uvicorn>=0.36.0",
 ]
 
